<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_account_first_edit"
        android:inputType="textCapWords"
        android:key="account_first"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_account_first" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_account_second_edit"
        android:inputType="textCapWords"
        android:key="account_second"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_account_second" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_account_third_edit"
        android:inputType="textCapWords"
        android:key="account_third"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_account_third" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_account_forth_edit"
        android:inputType="textCapWords"
        android:key="account_forth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_account_forth" />
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_account_second_list"
        android:entryValues="@array/pref_account_second_list_values"
        android:key="account_second_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_account_second" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_account_fifth_edit"
        android:inputType="textCapWords"
        android:key="account_fifth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_account_fifth" />

</PreferenceScreen>