<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="$"
        android:inputType="textCapWords"
        android:key="general_first"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="km"
        android:entries="@array/pref_general_second_list"
        android:entryValues="@array/pref_general_second_list_values"
        android:key="general_second"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_general_second" />
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_general_third_edit"
        android:inputType="numberDecimal"
        android:key="general_third"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_third" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_general_forth_edit"
        android:inputType="numberDecimal"
        android:key="general_forth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_forth" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_general_fifth_edit"
        android:inputType="textCapWords"
        android:key="general_fifth"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_general_fifth" />


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->


</PreferenceScreen>
