<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
   <!-- <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />-->

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_print_first_edit"
        android:inputType="textCapWords"
        android:key="print_first"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_print_first" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_print_second_edit"
        android:inputType="textCapWords"
        android:key="print_second"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_print_second" />
</PreferenceScreen>
